deployment/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ci-cd-gitlab-devops
  name: ci-cd-gitlab-devops-svc
spec:
  ports:
  - name: http
    port: 80 
    targetPort: 5000
  type: ClusterIP
  selector:
    app: ci-cd-gitlab-devops
