deployment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: ci-cd-gitlab-devops-svc 
            port:
              name: http
